--- a/responsive_design/01-index.html
+++ b/responsive_design/01-index.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet' href='01-styles.css'>
 </head>
 <body>
-<!– Header –>
+<!--Header-->
 <header class="header" data-section-theme="dark">
     <div class="container">
         <div class="header-container">
@@ -34,7 +34,7 @@
                         <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#latest_news" class="nav-link">Latest news</a>
+                        <a href="#latest_news" class="nav-link">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a href="#testimonials" class="nav-link">Testimonials</a>
@@ -45,7 +45,7 @@
                     <li class="nav-item">
                         <form action="#" method="post" class="form-search">
                             <input type="search" name="q" id="search-input" placeholder="Search..." aria-label="Search through site content">
-                            <button class="search-button">
+                            <button type="button" class="search-button">Search
                                 <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="search-icon">
                                     <title>
                                         Search icon
@@ -60,20 +60,20 @@
         </div>
     </div>
 </header>
-<!– Main –>
+<!--Main-->
 <main>
-    <!– Hero section –>
+    <!--Hero section-->  
     <section class="section-hero hero-homepage" data-section-theme="dark">
         <div class="container">
             <div class="section-body">
                 <section class="section-inner">
-                    <h2 class="section-title">We help you building your brand</h2>
+                    <h2 class="section-title">We help you building your brand!</h2>
                     <a href="#" class="button">Get Started</a>
                 </section>
             </div>
         </div>
     </section>
-    <!– Services section –>
+    <!--Services section--> 
     <section id="services" class="section section-services">
         <div class="container">
             <header class="section-header">
@@ -118,7 +118,7 @@
             </div>
         </div>
     </section>
-    <!– Works section –>
+    <!--Works section--> 
     <section id="works" class="section section-works" data-section-theme="dark">
         <div class="container">
             <header class="section-header">
@@ -167,7 +167,7 @@
             </div>
         </div>
     </section>
-    <!– About Us section –>
+    <!-- About Us section -->
     <section id="about" class="section section-about-us">
         <div class="container">
             <header class="section-header">
@@ -194,7 +194,7 @@
             </div>
         </div>
     </section>
-    <!– Latest news section –>
+    <!--Latest news section--> 
     <section id="latest_news" class="section section-latest-news">
         <div class="container">
             <header class="section-header">
@@ -239,7 +239,7 @@
             </div>
         </div>
     </section>
-    <!– Testimonials section –>
+    <!--Testimonials section--> 
     <section id="testimonial" class="section section-testimonial">
         <div class="container">
             <header class="section-header">
@@ -282,7 +282,7 @@
             </div>
         </div>
     </section>
-    <!– Contact section –>
+    <!--Contact section-->  
     <section id="contact" class="section section-contact">
         <div class="container">
             <header class="section-header">
@@ -298,7 +298,7 @@
         </div>
     </section>
 </main>
-<!– Footer –>
+<!--Footer-->  
 <footer class="footer" data-section-theme="dark">
     <div  class="container">
         <div class="row">
